Controller using Correct HttpStatus, remove warning open-in-view

--- a/rest-with-spring-boot-and-kotlin-erudio/src/main/resources/application.yml
+++ b/rest-with-spring-boot-and-kotlin-erudio/src/main/resources/application.yml
@@ -5,6 +5,7 @@ spring:
     username: root
     password: admin123
   jpa:
+    open-in-view: false
     hibernate:
       ddl-auto: update
     show-sql: false
