--- a/rest-with-spring-boot-and-kotlin-erudio/pom.xml
+++ b/rest-with-spring-boot-and-kotlin-erudio/pom.xml
@@ -34,6 +34,15 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+        <!--Flyway Micrations-->
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-mysql</artifactId>
+		</dependency>
 		<!--Dozer Mapper-->
 		<dependency>
 			<groupId>com.github.dozermapper</groupId>
@@ -93,6 +102,7 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+
 		</plugins>
 	</build>
 
