--- a/rest-with-spring-boot-and-kotlin-erudio/pom.xml
+++ b/rest-with-spring-boot-and-kotlin-erudio/pom.xml
@@ -18,6 +18,8 @@
 		<kotlin.version>1.9.10</kotlin.version>
 		<dozer.version>6.4.1</dozer.version>
 		<springdoc.version>2.0.2</springdoc.version>
+		<testcontainers.version>1.16.3</testcontainers.version>
+		<rest-assured.version>4.5.0</rest-assured.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,7 +52,7 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-        <!--Flyway Micrations-->
+        <!--Flyway Migrations-->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
@@ -86,6 +88,18 @@
 		<dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-stdlib</artifactId>
+		</dependency>
+		<!--Test containers with mysql-->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mysql</artifactId>
+			<version>${testcontainers.version}</version>
+		</dependency>
+		<!--Rest assured-->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>${rest-assured.version}</version>
 		</dependency>
 
 		<dependency>
