--- a/rest-with-spring-boot-and-kotlin-erudio/src/main/resources/application.yml
+++ b/rest-with-spring-boot-and-kotlin-erudio/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+cors:
+  originPatterns: http://localhost:3000, http://localhost:8080
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -9,3 +11,8 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: false
+spring-doc:
+  paths-to-match:
+    - /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
