--- a/rest-with-spring-boot-and-kotlin-erudio/src/main/resources/application.yml
+++ b/rest-with-spring-boot-and-kotlin-erudio/src/main/resources/application.yml
@@ -12,9 +12,12 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/rest_with_springboot_erudio?useTimezone=true&serverTimezone=UTC
-    username: root
+    url: jdbc:mysql://rest-with-springboot-erudio-edwin-lima.c7bwceqgsysk.us-east-1.rds.amazonaws.com:3306/rest-with-springboot-erudio-edwin-lima?useTimezone=true&serverTimezone=UTC
+    username: docker
     password: admin123
+#    url: jdbc:mysql://localhost:3306/rest_with_springboot_erudio?useTimezone=true&serverTimezone=UTC
+#    username: root
+#    password: admin123
   jpa:
     open-in-view: false
     hibernate:
